--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 body {
   font-family: "Press Start 2P";
+  font-size: 1rem;
   color: #fff;
   text-shadow: 4px 4px 2px rgba(0, 0, 0, 0.66);
   background-image: url(images/bg.png);
@@ -14,16 +15,35 @@ body {
   margin: 0;
 }
 
+#game-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #858681;
+  border: #000 solid 18px;
+  border-radius: 4px;
+  width: 80%; /* Use a percentage for responsiveness */
+  max-width: 800px; /* Add a max-width to prevent it from becoming too wide on larger screens */
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+#button_cont {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin-top: 20px;
+}
+
 button {
-  padding: 10px 20px;
-  margin: 10px;
   cursor: pointer;
   border: none;
-  border-radius: 5px;
   transition: background-color 0.3s ease;
   display: inline-block;
-  height: 300px;
-  width: 300px;
+  height: 10em;
+  width: 15em; /* Adjust the width as needed */
   background-color: transparent;
   transition: all 0.3s;
 }
@@ -33,38 +53,44 @@ button:hover {
   filter: drop-shadow(0px 0px 10px #000000);
 }
 
-#rock-btn {
+#rock,
+#paper,
+#scissors {
+  background-position: center;
+  background-size: cover;
+  width: 15em;
+  height: 15em;
+}
+
+#rock {
   background-image: url(images/rock.png);
-  background-position: auto;
-  background-size: cover;
 }
-
-#paper-btn {
+#paper {
   background-image: url(images/paper.png);
-  background-position: auto;
-  background-size: cover;
+}
+#scissors {
+  background-image: url(images/scissors.png);
 }
 
-#scissors-btn {
-  background-image: url(images/scissors.png);
-  background-position: auto;
-  background-size: cover;
-  size: 340px;
+#result-container {
+  margin-top: 20px;
 }
 
 #result {
-  margin-top: 20px;
   font-size: 20px;
   font-weight: bold;
+  text-align: center;
 }
 
-#game-container {
+#score-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: #858681;
-  border: #000 solid 18px;
-  border-radius: 4px;
+  justify-content: space-between;
+  width: 100%;
+  margin-top: 20px;
+}
 
-  padding: 20px;
+#player-score,
+#computer-score {
+  font-size: 18px;
+  font-weight: bold;
 }
